--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 env:
   TAG_NAME: 3.1.3-alpine
-  USER_NAME: ledermann
+  USER_NAME: gaizkaurd
 
 jobs:
   build:
@@ -27,10 +27,17 @@ jobs:
         working-directory: ./Final
         run: docker build -t final .
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+
       - name: Push the images to GitHub Container Registry
         if: github.ref == 'refs/heads/main'
         run: |
-          echo ${{ secrets.CR_PAT }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
 
           docker tag builder ghcr.io/${{ env.USER_NAME }}/rails-base-builder:latest
           docker tag builder ghcr.io/${{ env.USER_NAME }}/rails-base-builder:${{ env.TAG_NAME }}
@@ -71,18 +78,3 @@ jobs:
                     console.log("status " + deleteResponse.status)
                 }
             }
-
-      - name: Push the images to Docker Hub
-        if: github.ref == 'refs/heads/main'
-        run: |
-          echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-          docker tag builder ${{ env.USER_NAME }}/rails-base-builder:latest
-          docker push ${{ env.USER_NAME }}/rails-base-builder:latest
-          docker tag builder ${{ env.USER_NAME }}/rails-base-builder:${{ env.TAG_NAME }}
-          docker push ${{ env.USER_NAME }}/rails-base-builder:${{ env.TAG_NAME }}
-
-          docker tag final ${{ env.USER_NAME }}/rails-base-final:latest
-          docker push ${{ env.USER_NAME }}/rails-base-final:latest
-          docker tag final ${{ env.USER_NAME }}/rails-base-final:${{ env.TAG_NAME }}
-          docker push ${{ env.USER_NAME }}/rails-base-final:${{ env.TAG_NAME }}
