--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
           docker push ghcr.io/${{ env.USER_NAME }}/rails-base-builder-3.1.2:latest
           docker push ghcr.io/${{ env.USER_NAME }}/rails-base-builder-3.1.2:${{ env.TAG_NAME }}
 
-          docker tag final ghcr.io/${{ env.USER_NAME }}/rails-base-builder-3.1.2:latest
-          docker push ghcr.io/${{ env.USER_NAME }}/rails-base-builder-3.1.2:latest
-          docker tag final ghcr.io/${{ env.USER_NAME }}/rails-base-builder-3.1.2:${{ env.TAG_NAME }}
-          docker push ghcr.io/${{ env.USER_NAME }}/rails-base-builder-3.1.2:${{ env.TAG_NAME }}
+          docker tag final ghcr.io/${{ env.USER_NAME }}/rails-base-final-3.1.2:latest
+          docker push ghcr.io/${{ env.USER_NAME }}/rails-base-final-3.1.2:latest
+          docker tag final ghcr.io/${{ env.USER_NAME }}/rails-base-final-3.1.2:${{ env.TAG_NAME }}
+          docker push ghcr.io/${{ env.USER_NAME }}/rails-base-final-3.1.2:${{ env.TAG_NAME }}
